Added persist and delete methods