@@ -1,148 +1,145 @@
 package orm;
 
-import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
-import orm.annotation.Column;
-import orm.annotation.Id;
-import orm.annotation.Table;
-import orm.exception.EntityIdentityNotFound;
+import orm.action.DeleteAction;
+import orm.action.InsertAction;
+import orm.action.OrmAction;
+import orm.action.UpdateAction;
+import orm.metadata.EntityKey;
+import orm.metadata.TypeMetadata;
 
 import javax.sql.DataSource;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
+import java.sql.SQLException;
 import java.util.*;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
-@RequiredArgsConstructor
 public class Session {
     private final String FIND_ALL_QUERY = "SELECT * FROM %s";
     private final String FIND_ONE_QUERY = "SELECT * FROM %s WHERE %s = ?";
     private final String UPDATE_QUERY = "UPDATE %s SET %s WHERE %s = ?";
+    private final String INSERT_QUERY = "INSERT INTO %s (%s) VALUES (%s)";
+    private final String DELETE_QUERY = "DELETE FROM %s WHERE %s = ?";
+
+    private final Map<Class<?>, TypeMetadata> types = new HashMap<>();
     private final Map<EntityKey, Object> cache = new HashMap<>();
     private final Map<EntityKey, Object[]> snapshot = new HashMap<>();
+    private final List<OrmAction> actions = new ArrayList<>();
+    private final Connection connection;
 
-    private final DataSource dataSource;
-
-    private String getIdField(Class<?> type) {
-        return Arrays.stream(type.getDeclaredFields())
-            .filter(field -> field.getAnnotation(Id.class) != null)
-            .findFirst()
-            .map(field -> field.getAnnotation(Id.class).name())
-            .orElseThrow(() -> new EntityIdentityNotFound(
-                String.format("Entity %s does not include @Id annotation", type.getSimpleName())
-            ));
-    }
-
-    private String getTableName(Class<?> type) {
-        Table tableNameAnnotation = type.getAnnotation(Table.class);
-
-        if (tableNameAnnotation != null && tableNameAnnotation.name() != null) {
-            return tableNameAnnotation.name();
-        }
-
-        return type.getSimpleName();
-    }
-
-    private String getColumnName(Field field) {
-        Column fieldAnnotation = field.getAnnotation(Column.class);
-
-        if (fieldAnnotation != null && fieldAnnotation.name() != null) {
-            return fieldAnnotation.name();
-        }
-
-        return field.getName();
+    public Session(DataSource dataSource) throws SQLException {
+        this.connection = dataSource.getConnection();
+        this.connection.setAutoCommit(false);
     }
 
     @SneakyThrows
     private <T> T parseResultSet(Class<T> type, ResultSet resultSet) {
-        Constructor<T> constructor = (Constructor<T>) type.getDeclaredConstructors()[0];
-        T instance = constructor.newInstance();
+        TypeMetadata<T> typeMetadata = types.computeIfAbsent(type, TypeMetadata::new);
 
-        for (Field field : type.getDeclaredFields()) {
-            field.setAccessible(true);
-            field.set(instance, resultSet.getObject(getColumnName(field)));
-        }
-
-        return instance;
+        return typeMetadata.parse(resultSet);
     }
 
     @SneakyThrows
     private void executeSelectQuery(Consumer<ResultSet> resultSetConsumer, String sql, Object... params) {
-        try (Connection connection = dataSource.getConnection()) {
+        System.out.printf("SQL: %s%n", sql);
 
-            System.out.printf("SQL: %s%n", sql);
+        try (PreparedStatement preparedStatement = connection.prepareStatement(sql)) {
+            for (int i = 0; i < params.length; i++) {
+                preparedStatement.setObject(i + 1, params[i]);
+            }
 
-            try (PreparedStatement preparedStatement = connection.prepareStatement(sql)) {
-                for (int i = 0; i < params.length; i++) {
-                    preparedStatement.setObject(i + 1, params[i]);
-                }
+            ResultSet resultSet = preparedStatement.executeQuery();
 
-                ResultSet resultSet = preparedStatement.executeQuery();
-
-                while (resultSet.next()) {
-                    resultSetConsumer.accept(resultSet);
-                }
+            while (resultSet.next()) {
+                resultSetConsumer.accept(resultSet);
             }
         }
     }
 
     @SneakyThrows
     private void executeUpdateQuery(String sql, Object... params) {
-        try (Connection connection = dataSource.getConnection()) {
+        System.out.printf("SQL: %s%n", sql);
 
-            System.out.printf("SQL: %s%n", sql);
-
-            try (PreparedStatement preparedStatement = connection.prepareStatement(sql)) {
-                for (int i = 0; i < params.length; i++) {
-                    preparedStatement.setObject(i + 1, params[i]);
-                }
-
-                preparedStatement.executeUpdate();
+        try (PreparedStatement preparedStatement = connection.prepareStatement(sql)) {
+            for (int i = 0; i < params.length; i++) {
+                preparedStatement.setObject(i + 1, params[i]);
             }
+
+            preparedStatement.executeUpdate();
         }
     }
 
     @SneakyThrows
     private void updateEntity(Object entity) {
-        Class<?> type = entity.getClass();
-        String identityName = getIdField(type);
-        Field identityField = type.getDeclaredField(identityName);
-        Field[] fields = type.getDeclaredFields();
-        List<Object> params = new ArrayList<>();
+        TypeMetadata<?> typeMetadata = types.computeIfAbsent(entity.getClass(), TypeMetadata::new);
 
-        String sqlUpdateParams = Arrays.stream(fields)
-            .filter(field -> !field.getName().equals(identityName))
-            .map(field -> {
-                field.setAccessible(true);
+        Map<String, Object> columns = typeMetadata.getColumns(entity);
+        List<String> params = new ArrayList<>();
+        List<Object> values = new ArrayList<>();
 
-                try {
-                    params.add(field.get(entity));
-                    return String.format("%s = ?", getColumnName(field));
-                } catch (IllegalAccessException e) {
-                    e.printStackTrace();
-                }
+        columns.forEach((s, o) -> {
+            params.add(String.format("%s = ?", s));
+            values.add(o);
+        });
 
-                return null;
-            })
-            .filter(Objects::nonNull)
-            .collect(Collectors.joining(", "));
+        values.add(typeMetadata.getIdValue(entity));
 
-        identityField.setAccessible(true);
-        params.add(identityField.get(entity));
+        actions.add(new UpdateAction(
+            String.format(
+                UPDATE_QUERY,
+                typeMetadata.getTableName(),
+                String.join(", ", params),
+                typeMetadata.getIdentityName()
+            ),
+            values.toArray()
+        ));
+    }
 
-        executeUpdateQuery(String.format(UPDATE_QUERY, getTableName(type), sqlUpdateParams, identityName), params.toArray());
+    @SneakyThrows
+    public void persist(Object entity) {
+        TypeMetadata<?> typeMetadata = types.computeIfAbsent(entity.getClass(), TypeMetadata::new);
+
+        Map<String, Object> columns = typeMetadata.getColumns(entity);
+        List<String> params = new ArrayList<>();
+        List<Object> values = new ArrayList<>();
+
+        columns.forEach((s, o) -> {
+            params.add(s);
+            values.add(o);
+        });
+
+        actions.add(new InsertAction(
+            String.format(
+                INSERT_QUERY,
+                typeMetadata.getTableName(),
+                String.join(", ", params),
+                params.stream()
+                    .map(f -> "?").collect(Collectors.joining(", "))
+            ),
+            values.toArray()
+        ));
+    }
+
+    @SneakyThrows
+    public void remove(Object entity) {
+        TypeMetadata<?> typeMetadata = types.computeIfAbsent(entity.getClass(), TypeMetadata::new);
+
+        actions.add(new DeleteAction(
+            String.format(DELETE_QUERY, typeMetadata.getTableName(), typeMetadata.getIdentityName()),
+            new Object[]{typeMetadata.getIdValue(entity)}
+        ));
     }
 
     private <T> List<T> findAll(Class<T> type) {
         List<T> result = new ArrayList<>();
+        TypeMetadata<T> typeMetadata = types.computeIfAbsent(type, TypeMetadata::new);
 
         executeSelectQuery(
             rs -> result.add(parseResultSet(type, rs)),
-            String.format(FIND_ALL_QUERY, getTableName(type))
+            String.format(FIND_ALL_QUERY, typeMetadata.getTableName())
         );
 
         return result;
@@ -150,10 +147,11 @@ public class Session {
 
     private <T> T findOne(Class<T> type, Object id) {
         List<T> result = new ArrayList<>();
+        TypeMetadata<T> typeMetadata = types.computeIfAbsent(type, TypeMetadata::new);
 
         executeSelectQuery(
             rs -> result.add(parseResultSet(type, rs)),
-            String.format(FIND_ONE_QUERY, getTableName(type), getIdField(type)),
+            String.format(FIND_ONE_QUERY, typeMetadata.getTableName(), typeMetadata.getIdentityName()),
             id
         );
 
@@ -173,20 +171,13 @@ public class Session {
     }
 
     private Object[] getObjectValues(Object value) {
-        Class<?> type = value.getClass();
+        TypeMetadata<?> typeMetadata = types.computeIfAbsent(value.getClass(), TypeMetadata::new);
 
-        return Arrays.stream(type.getDeclaredFields())
-            .sorted(Comparator.comparing(Field::getName))
-            .map(field -> {
-                field.setAccessible(true);
-                try {
-                    return field.get(value);
-                } catch (IllegalAccessException e) {
-                    e.printStackTrace();
-                }
-                return null;
-            })
-            .filter(Objects::nonNull)
+        return typeMetadata.getColumns(value)
+            .entrySet()
+            .stream()
+            .sorted(Map.Entry.comparingByKey())
+            .map(Map.Entry::getValue)
             .toArray();
     }
 
@@ -199,16 +190,9 @@ public class Session {
     }
 
     private <T> List<T> cacheEntityList(Class<T> type, List<T> result) {
-        result.forEach(item -> {
-            try {
-                String fieldName = getIdField(type);
-                Field identityField = type.getDeclaredField(fieldName);
-                identityField.setAccessible(true);
-                cacheEntity(type, identityField.get(item), item);
-            } catch (NoSuchFieldException | IllegalAccessException e) {
-                e.printStackTrace();
-            }
-        });
+        TypeMetadata<T> typeMetadata = types.computeIfAbsent(type, TypeMetadata::new);
+
+        result.forEach(item -> cacheEntity(type, typeMetadata.getIdValue(item), item));
 
         return result;
     }
@@ -232,19 +216,53 @@ public class Session {
         return cache.entrySet().stream()
             .filter(this::hasChanges)
             .map(entityKeyObjectEntry -> cache.get(entityKeyObjectEntry.getKey()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public <T> List<T> find(Class<T> type) {
+        flush();
+
         return cacheEntityList(type, findAll(type));
     }
 
     public <T> T find(Class<T> type, Object id) {
+        flush();
+
         return getEntityFromCache(type, id)
             .orElseGet(() -> cacheEntity(type, id, findOne(type, id)));
     }
 
-    public void close() {
-        getAffectedEntities().forEach(this::updateEntity);
+    public void close() throws SQLException {
+        try {
+            getAffectedEntities().forEach(this::updateEntity);
+
+            flush();
+            connection.commit();
+        } catch (SQLException e) {
+            e.printStackTrace();
+            connection.rollback();
+        } finally {
+            connection.close();
+        }
+    }
+
+    public void flush() {
+        if (actions.isEmpty()) {
+            return;
+        }
+
+        actions.stream()
+            .filter(a -> a.getClass().equals(InsertAction.class))
+            .forEach(a -> executeUpdateQuery(a.getSql(), a.getParams()));
+
+        actions.stream()
+            .filter(a -> a.getClass().equals(UpdateAction.class))
+            .forEach(a -> executeUpdateQuery(a.getSql(), a.getParams()));
+
+        actions.stream()
+            .filter(a -> a.getClass().equals(DeleteAction.class))
+            .forEach(a -> executeUpdateQuery(a.getSql(), a.getParams()));
+
+        actions.clear();
     }
 }
